import "search/begemot/core/proto/fields.proto";

package NBg.NProto;

message TAliceParsedEntity {
    optional int32 StartToken = 1;
    optional int32 EndToken = 2;
    optional string Value = 3;
    optional string Text = 4;
    optional string Type = 5;
}

message TAliceParsedEntitiesArray {
    repeated TAliceParsedEntity ParsedEntities = 1 [(always_array)=true];
}

message TAliceParsedEntitiesByType {
    map<string, TAliceParsedEntitiesArray> ParsedEntitiesByType = 1 [(as_kv_array) = true];
    repeated string Tokens = 2 [(always_array)=true];
}
